--- a/doc/releases/0.2.14.rst
+++ b/doc/releases/0.2.14.rst
@@ -2,10 +2,11 @@ probeinterface 0.2.14
 ---------------------
 
 
-October, 26th 2022
+October, 27th 2022
 
-* Fix a strong bug in read_spikeglx() that was affected
-  the channel location when the Imec Readout Table (aka imRo)
-  was set with multi bank pattern.
+* Fix a **strong bug** in read_spikeglx()/read_imro() that was leading
+  to wrong contact locations when the Imec Readout Table (aka imRo)
+  was set with complex multi bank pattern.
   **You should maybe re-run all your analysis with this update if you have a doubt**
-  **on the contact position for recent spike sorting**
+  **on the contact positions for recent spike sorting**
+  A big thanks to Tom Bugnon to catch this.
