--- a/doc/releases/0.2.21.rst
+++ b/doc/releases/0.2.21.rst
@@ -7,5 +7,6 @@ Feb, 1st 2024
 Features
 ^^^^^^^^
 
-* Add equality dunder method and test to Probe object (#248)
-* Add save to zarr method to Probe object (#250)
+* Add equality dunder method and test to `Probe` object (#248)
+* Add save to zarr method to `Probe` object (#250)
+* Fix `Probe` special properties setters (skip empty strings) (#252)
