Fix release notes 2

--- a/doc/releases/0.2.25.rst
+++ b/doc/releases/0.2.25.rst
@@ -7,14 +7,14 @@ Feb, 6th 2025
 Features
 ^^^^^^^^
 
-* Remove oe_x_shift, add NP2020, and fix OE contour (#323)
+* Add cambridge neurotech adaptor to wiring > RHD2164 (#304)
 * Refactor neuropixel in a separate file and generate the NP library (#316)
 * Regenerate ASSY-1-P1 and ASSY-1-P2 probes (#317)
 
 Bug fixes
 ^^^^^^^^^
 
-* Remove oe_x_shift, add NP2020, and fix OE contour (#323)
+* Fix OpenEphys interface issue with multiple probes of which some are disabled (#308)
 * Update schema to floats for radius, width, height (#296, #297)
 
 Tests
