Fix hatchling packaging

--- a/doc/releases/0.2.27.rst
+++ b/doc/releases/0.2.27.rst
@@ -1,7 +1,7 @@
-probeinterface 0.2.27
----------------------
+probeinterface 0.2.27 (broken)
+------------------------------
 
-May, 2nd 2025
+May, 5th 2025
 
 
 Features
